# canary-fastrtc

./: LICENSE  README.md  build_package.py  pyproject.toml  setup.py  upload_to_pypi.py
examples/: basic_usage.py  exampleSmolagent.py  fastrtc_integration.py
src/canary_fastrtc/: __init__.py  model.py  utils.py
tests/: test_model.py
